# lardata

./: CMakeLists.txt
DataProviders/: CMakeLists.txt  DetectorClocks.cxx  DetectorClocksStandard.cxx  DetectorProperties.cxx  DetectorProperties.h  DetectorPropertiesStandard.cxx  IDetectorClocks.h  IDetectorProperties.h  ILArProperties.h  IRunHistory.h  LArProperties.cxx  LArProperties.h  LArPropertiesStandard.cxx  LArPropertiesStandard.h  RunHistory.cxx  RunHistory.h  RunHistoryStandard.h
DetectorInfo/: CMakeLists.txt  ClockConstants.h  DetectorClocksException.h  DetectorClocksStandard.cxx  DetectorClocksStandard.h  DetectorProperties.h  DetectorPropertiesStandard.cxx  ElecClock.h  LArProperties.h  LArPropertiesStandard.cxx  LArPropertiesStandard.h  ProviderPack.h  ProviderUtil.h  RunHistoryStandard.cxx  RunHistoryStandard.h  detectorproperties_argoneut.fcl  detectorproperties_lartpcdetector.fcl  larproperties_argoneut.fcl
RawData/: AuxDetDigit.cxx  AuxDetDigit.h  BeamInfo.cxx  CMakeLists.txt  DAQHeader.cxx  DAQHeader.h  ExternalTrigger.cxx  ExternalTrigger.h  GNUmakefile  OpDetPulse.cxx  OpDetWaveform.h  RawDigit.cxx  RawDigit.h  RawOpDetWaveform.h  TriggerData.h  classes.h  classes_def.xml  raw.cxx  raw.h
RawData/utils/: CMakeLists.txt  GNUmakefile  LArRawInputDriver.cxx  LArRawInputDriverJP250L.cxx  LArRawInputDriverJP250L.h  LArRawInputDriverLongBo.cxx  LArRawInputDriverLongBo.h  LArRawInputDriverShortBo.cxx  LArRawInputDriverShortBo.h  LArRawInputDriverUBooNE.cxx.sample  LArRawInputSourceJP250L_source.cc  LArRawInputSourceLB_source.cc  LArRawInputSourceSB_source.cc  LArRawInputSource_source.cc  rawtorootconvert.fcl
RecoObjects/: BezierTrack.cxx  BezierTrack.h  CMakeLists.txt  Cluster3D.h  GNUmakefile  InteractGeneral.h  InteractPlane.cxx  InteractPlane.h  Interactor.cxx  Interactor.h  KETrack.cxx  KFitTrack.cxx  KFitTrack.h  KGTrack.cxx  KGTrack.h  KHit.h  KHitBase.cxx  KHitBase.h  KHitContainer.cxx  KHitContainer.h  KHitContainerWireLine.cxx  KHitContainerWireLine.h  KHitContainerWireX.cxx  KHitContainerWireX.h  KHitGroup.cxx  KHitGroup.h  KHitMulti.cxx  KHitTrack.h  KHitWireLine.cxx  KHitWireX.cxx  KHitWireX.h  KHitsTrack.cxx  KTrack.cxx  KTrack.h  KalmanLinearAlgebra.h  PropAny.cxx  PropAny.h  PropXYZPlane.cxx  PropXYZPlane.h  PropYZLine.cxx  (+24 more)
RecoObjects/test/: CMakeLists.txt  GNUmakefile  KalmanFilterTest.fcl  KalmanFilterTest.sh  KalmanFilterTest_module.cc  LATest.cxx  PropTest.fcl  PropTest.sh  PropTest_module.cc  SurfaceTest.cxx
Utilities/: AssociationUtil.h  BulkAllocator.h  CMakeLists.txt  ClockConstants.h  ComputePi_module.cc  CountersMap.h  DatabaseUtil.h  DatabaseUtil_service.cc  Dereference.h  DetectorClocksService.h  DetectorClocksServiceStandard_service.cc  DetectorClocksService_service.cc  DetectorPropertiesService.h  DetectorPropertiesServiceArgoNeuT.h  DetectorPropertiesServiceArgoNeuT_service.cc  DetectorPropertiesServiceStandard.h  DetectorPropertiesServiceStandard_service.cc  DetectorPropertiesService_service.cc  DetectorProperties_service.cc  DoubleIterator.h  ElecClock.h  FetchRandomSeed.cxx  FetchRandomSeed.h  FileCatalogMetadataExtras.h  FileCatalogMetadataExtras_service.cc  GNUmakefile  GeometryUtilities.cxx  GeometryUtilities.h  IDetectorClocksService.h  IDetectorPropertiesService.h  ILArPropertiesService.h  IRunHistoryService.h  LArFFT.h  LArFFT_service.cc  LArProperties.h  LArPropertiesService.h  LArPropertiesServiceArgoNeuT.h  LArPropertiesServiceArgoNeuT_service.cc  LArPropertiesService_service.cc  LArProperties_service.cc  (+62 more)
Utilities/test/: CMakeLists.txt  GNUmakefile  LArPropTest_module.cc  lartest.fcl  lartest.sh  sss.fcl
lardata/: CMakeLists.txt
lardata/AnalysisAlg/: CMakeLists.txt  CalorimetryAlg.cxx  CalorimetryAlg.h
lardata/AnalysisBase/: CMakeLists.txt  Calorimetry.cxx  Calorimetry.h  CosmicTag.cxx  CosmicTag.h  FlashMatch.cxx  ParticleID.h  T0.cxx  classes.h  classes_def.xml
lardata/AnalysisBaseInLarDataObj/: CMakeLists.txt  ParticleID.cxx  classes.h
lardata/ArtDataHelper/: CMakeLists.txt  CMakeLists.txt~  ChargedSpacePointCreator.cpp  ChargedSpacePointCreator.h  FindAllP.h  HitCreator.cxx  HitCreator.h  HitUtils.h  MVAReader.cxx  MVAReader.h  MVAWrapperBase.cxx  MVAWrapperBase.h  MVAWriter.cxx  MVAWriter.h  ToElement.h  TrackUtils.cxx  TrackUtils.h  WireCreator.cxx  WireCreator.h
lardata/DetectorInfo/: CMakeLists.txt  ClockConstants.h  DetectorClocksStandard.cxx  DetectorClocksStandard.h  DetectorProperties.h  DetectorPropertiesStandard.cxx  DetectorPropertiesStandardTestHelpers.h  ElecClock.h  LArProperties.h  LArPropertiesStandard.cxx  LArPropertiesStandard.h  ProviderPack.h  RunHistoryStandard.cxx  detectorclocks_argoneut.fcl  larproperties_argoneut.fcl
lardata/DetectorInfoServices/: CMakeLists.txt  DetectorClocksService.h  DetectorClocksServiceStandard.h  DetectorClocksServiceStandard_service.cc  DetectorPropertiesService.h  DetectorPropertiesServiceStandard.h  DetectorPropertiesServiceStandard_service.cc  LArPropertiesService.h  LArPropertiesServiceStandard.h  LArPropertiesServiceStandard_service.cc  RunHistoryServiceStandard.h  ServicePack.h
lardata/MCBase/: CMakeLists.txt  MCHit.cxx  MCHit.h  MCShower.cxx  MCShower.h  classes.h  classes_def.xml
lardata/MCBaseInLarDataObj/: MCHitCollection.h  classes.h
lardata/OpticalDetectorData/: CMakeLists.txt  ChannelDataGroup.h  FIFOChannel.h  OpticalRawDigit.h  classes.h  classes_def.xml
lardata/OpticalDetectorDataInLarDataObj/: ChannelData.h  PMTTrigger.h  classes.h
lardata/RawData/: AuxDetDigit.cxx  BeamInfo.cxx  CMakeLists.txt  DAQHeader.cxx  ExternalTrigger.cxx  OpDetPulse.cxx  RawDigit.cxx  RawDigit.h  classes.h  classes_def.xml  raw.cxx  raw.h
lardata/RawDataInLarDataObj/: CMakeLists.txt
lardata/RecoBase/: CMakeLists.txt  Cluster.h  EndPoint2D.h  Event.cxx  Hit.cxx  Hit.h  OpFlash.cxx  OpHit.cxx  OpHit.h  PCAxis.cxx  Seed.cxx  Shower.cxx  Shower.h  SpacePoint.cxx  SpacePoint.h  Track.cxx  Track.h  TrackHitMeta.cxx  Vertex.h  Wire.cxx  Wire.h  classes.h
test/: CMakeLists.txt  raw_test.cc  sparse_vector_test.cc  test_donothing.fcl
(+449 files in other folders)
