
add_subdirectory(AnalysisAlg)
add_subdirectory(AnalysisBase)
## retired - obsolete code for ArgoNeut - needs an overhaul for art 1.08.xx
##add_subdirectory(Monitoring)
add_subdirectory(OpticalDetectorData)
add_subdirectory(RawData)
add_subdirectory(RecoBase)
add_subdirectory(RecoBaseArt) # art-dependent interface to RecoBase objects
add_subdirectory(RecoObjects)
add_subdirectory(Utilities)
add_subdirectory(MCBase)
add_subdirectory(DetectorInfo)
