
add_subdirectory(Utilities)
add_subdirectory(RecoObjects)
add_subdirectory(RecoBaseArt)
add_subdirectory(RecoBase)
add_subdirectory(RawData)
add_subdirectory(OpticalDetectorData)
add_subdirectory(MCBase)
add_subdirectory(DetectorInfoServices)
add_subdirectory(DetectorInfo)
add_subdirectory(AnalysisBase)
add_subdirectory(AnalysisAlg)

